k8s-backend/postgres-cluster-ip-service.yaml
# @format

apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  ClusterIP: None
  selector:
    component: postgres
  ports:
    - portocol: TCP
      port: 5432
      targetPort: 5432
